--- a/index.html
+++ b/index.html
@@ -1,10 +1,7 @@
 <html>
   <head>
-  	<meta http-equiv="Content-Security-Policy" content="default-src 'self' diegobergua.com">
-
-    <META http-equiv="refresh" content="1;URL=http://loto.diegobergua.com">
-
+    <meta http-equiv="refresh" content="0.01;URL=https://www.sinnaps.com/cloud">
   </head>
-  <body bgcolor="#5092fe" style="background-image:url('splash.png');background-position: center top;background-repeat: no-repeat;background-size:auto 100%">
+  <body style="overflow:hidden;background-image:url('splash.png');background-position: center center;background-repeat: no-repeat;background-size:100% auto;">
   </body>
 </html>
