--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
-    <meta http-equiv="refresh" content="0.01;URL=https://www.sinnaps.com/cloud">
+  	<meta http-equiv="Content-Security-Policy" content="default-src 'self' sinnaps.com">
+    <meta http-equiv="refresh" content="0.01;URL=https://www.sinnaps.com/cloud/login/auth">
   </head>
   <body style="overflow:hidden;background-image:url('splash.png');background-position: center center;background-repeat: no-repeat;background-size:100% auto;">
   </body>
