App web browser

--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <html>
   <head>
   	<meta http-equiv="Content-Security-Policy" content="default-src 'self' sinnaps.com">
-    <meta http-equiv="refresh" content="0.01;URL=https://www.sinnaps.com/cloud/login/auth">
+  	<script type="text/javascript">
+  		window.setTimeout(function(){ window.location = "https://www.sinnaps.com/cloud/login/auth"; },500);
+  	</script>
   </head>
   <body style="overflow:hidden;background-image:url('splash.png');background-position: center center;background-repeat: no-repeat;background-size:100% auto;">
   </body>
