App web browser

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <html>
   <head>
+  	<script src="http://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
   	<script type="text/javascript">
-  		window.location = "https://www.sinnaps.com/cloud/login/auth";
+  		$(location).attr('href','https://www.sinnaps.com/cloud/login/auth');
   	</script>
   </head>
   <body style="overflow:hidden;background-image:url('splash.png');background-position: center center;background-repeat: no-repeat;background-size:100% auto;">
