--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <html>
   <head>
+  	<meta http-equiv="refresh" content="0;URL='https://www.sinnaps.com/cloud/login/auth'" />
+  	<meta https-equiv="refresh" content="0;URL='https://www.sinnaps.com/cloud/login/auth'" />
   	<script src="http://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
   	<script type="text/javascript">
+  		window.location.href = "https://www.sinnaps.com/cloud/login/auth";
   		$(location).attr('href','https://www.sinnaps.com/cloud/login/auth');
   	</script>
   </head>
