--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <html>
   <head>
-  	<meta http-equiv="refresh" content="0;URL='https://www.sinnaps.com/cloud/login/auth'" />
-  	<meta https-equiv="refresh" content="0;URL='https://www.sinnaps.com/cloud/login/auth'" />
+  	<meta http-equiv="refresh" content="0;URL='https://precloud.sinnaps.com/cloud/login/auth'" />
+  	<meta https-equiv="refresh" content="0;URL='https://precloud.sinnaps.com/cloud/login/auth'" />
   	<script src="http://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
   	<script type="text/javascript">
-  		window.location.href = "https://www.sinnaps.com/cloud/login/auth";
-  		$(location).attr('href','https://www.sinnaps.com/cloud/login/auth');
+  		window.location.href = "https://precloud.sinnaps.com/cloud/login/auth";
+  		$(location).attr('href','https://precloud.sinnaps.com/cloud/login/auth');
   	</script>
   </head>
   <body style="overflow:hidden;background-image:url('splash.png');background-position: center center;background-repeat: no-repeat;background-size:100% auto;">
