--- a/index.html
+++ b/index.html
@@ -4,10 +4,17 @@
   	<meta https-equiv="refresh" content="0;URL='https://precloud.sinnaps.com/precloud/mobile/'" />
   	<script src="http://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
   	<script type="text/javascript">
+      setTimeout(function(){
+        window.location.href = "https://precloud.sinnaps.com/precloud/mobile/";
+      },100);
   		window.location.href = "https://precloud.sinnaps.com/precloud/mobile/";
   		$(location).attr('href','https://precloud.sinnaps.com/precloud/mobile/');
+      function goHome(){
+        window.location.href = "https://precloud.sinnaps.com/precloud/mobile/";
+      }
   	</script>
   </head>
   <body style="overflow:hidden;background-image:url('splash.png');background-position: center center;background-repeat: no-repeat;background-size:100% auto;">
+    <button onclick="goHome()">Cargar</button>
   </body>
 </html>
