--- a/index.html
+++ b/index.html
@@ -20,5 +20,6 @@
   </head>
   <body style="overflow:hidden;background-image:url('splash.png');background-position: center center;background-repeat: no-repeat;background-size:100% auto;">
     <button onclick="goHome()">Cargar</button>
+    <a href="https://precloud.sinnaps.com/precloud/mobile/">Ir a mobile</a>
   </body>
 </html>
