--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
   </head>
   <body style="overflow:hidden;background-image:url('splash.png');background-position: center center;background-repeat: no-repeat;background-size:100% auto;">
     <button onclick="goHome()">Cargar</button>
-    <a href="https://precloud.sinnaps.com/precloud/mobile/">Ir a mobile</a>
+    <a href="https://precloud.sinnaps.com">Ir a pre</a>
+    <a href="https://precloud.sinnaps.com/precloud/mobile/">Ir a pre/mobile</a>
+    <a href="https://www.sinnaps.com">Ir a www</a>
+    <a href="https://www.sinnaps.com/cloud/">Ir a https://www.sinnaps.com/cloud</a>
+    <a href="https://www.sinnaps.com/cloud/user/viewProfile">Ir a https://www.sinnaps.com/cloud/user/viewProfile</a>
   </body>
 </html>
