--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   	</script>
   </head>
   <body style="overflow:hidden;background-image:url('splash.png');background-position: center center;background-repeat: no-repeat;background-size:100% auto;">
-    <button onclick="goHome()">Cargar</button>
+    <button onclick="goHome()">Cargaar</button>
     <a href="https://precloud.sinnaps.com">Ir a pre</a>
     <a href="https://precloud.sinnaps.com/precloud/mobile/">Ir a pre/mobile</a>
     <a href="https://www.sinnaps.com">Ir a www</a>
