--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <meta http-equiv = "Content-Security-Policy" content = "default-src *; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval'" />
     <!--
   	<meta http-equiv="refresh" content="0;URL='https://precloud.sinnaps.com/precloud/mobile/'" />
   	<meta https-equiv="refresh" content="0;URL='https://precloud.sinnaps.com/precloud/mobile/'" />
