--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <meta http-equiv = "Content-Security-Policy" content = "default-src *; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval'" />
+    <meta http-equiv = "Content-Security-Policy" content = "default-src 'self' sinnaps.com">
     <!--
   	<meta http-equiv="refresh" content="0;URL='https://precloud.sinnaps.com/precloud/mobile/'" />
   	<meta https-equiv="refresh" content="0;URL='https://precloud.sinnaps.com/precloud/mobile/'" />
@@ -25,6 +25,5 @@
     <a href="https://precloud.sinnaps.com/precloud/mobile/">Ir a pre/mobile</a>
     <a href="https://www.sinnaps.com">Ir a www</a>
     <a href="https://www.sinnaps.com/cloud/">Ir a https://www.sinnaps.com/cloud</a>
-    <a href="https://www.sinnaps.com/cloud/user/viewProfile">Ir a https://www.sinnaps.com/cloud/user/viewProfile</a>
   </body>
 </html>
