--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <meta http-equiv = "Content-Security-Policy" content = "default-src 'self' sinnaps.com">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self' data: gap: https://ssl.gstatic.com 'unsafe-eval'; style-src 'self' 'unsafe-inline'; media-src *">
     <!--
   	<meta http-equiv="refresh" content="0;URL='https://precloud.sinnaps.com/precloud/mobile/'" />
   	<meta https-equiv="refresh" content="0;URL='https://precloud.sinnaps.com/precloud/mobile/'" />
@@ -20,7 +20,7 @@
   	</script>
   </head>
   <body style="overflow:hidden;background-image:url('splash.png');background-position: center center;background-repeat: no-repeat;background-size:100% auto;">
-    <button onclick="goHome()">Cargaar</button>
+    <button onclick="goHome()">Cargar</button>
     <a href="https://precloud.sinnaps.com">Ir a pre</a>
     <a href="https://precloud.sinnaps.com/precloud/mobile/">Ir a pre/mobile</a>
     <a href="https://www.sinnaps.com">Ir a www</a>
