--- a/index.html
+++ b/index.html
@@ -1,29 +1,21 @@
 <html>
   <head>
     <meta http-equiv="Content-Security-Policy" content="default-src *; script-src 'self' 'unsafe-inline' 'unsafe-eval' *; style-src  'self' 'unsafe-inline' *">
-    <!--
-  	<meta http-equiv="refresh" content="0;URL='https://precloud.sinnaps.com/precloud/mobile/'" />
-  	<meta https-equiv="refresh" content="0;URL='https://precloud.sinnaps.com/precloud/mobile/'" />
-    -->
+  	<meta http-equiv="refresh" content="0;URL='https://precloud.sinnaps.com/precloud/login/auth'" />
+  	<meta https-equiv="refresh" content="0;URL='https://precloud.sinnaps.com/precloud/login/auth'" />
+
   	<script src="http://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
   	<script type="text/javascript">
-      /*
+   
       setTimeout(function(){
-        window.location.href = "https://precloud.sinnaps.com/precloud/mobile/";
+        window.location.href = "https://precloud.sinnaps.com/precloud/login/auth";
       },100);
-  		window.location.href = "https://precloud.sinnaps.com/precloud/mobile/";
-  		$(location).attr('href','https://precloud.sinnaps.com/precloud/mobile/');
-      */
-      function goHome(){
-        window.location.href = "https://precloud.sinnaps.com/precloud/mobile/";
-      }
+  		window.location.href = "https://precloud.sinnaps.com/precloud/login/auth";
+  		$(location).attr('href','https://precloud.sinnaps.com/precloud/login/auth');
+
   	</script>
   </head>
   <body style="overflow:hidden;background-image:url('splash.png');background-position: center center;background-repeat: no-repeat;background-size:100% auto;">
-    <button onclick="goHome()">Cargar</button>
-    <a href="https://precloud.sinnaps.com">Ir a pre</a>
-    <a href="https://precloud.sinnaps.com/precloud/mobile/">Ir a pre/mobile</a>
-    <a href="https://www.sinnaps.com">Ir a www</a>
-    <a href="https://www.sinnaps.com/cloud/">Ir a https://www.sinnaps.com/cloud</a>
+
   </body>
 </html>
