--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
       <meta http-equiv="refresh" content="0;URL='https://precloud.sinnaps.com/precloud/login/auth'" />
       <meta https-equiv="refresh" content="0;URL='https://precloud.sinnaps.com/precloud/login/auth'" />
     -->
-  	<script src="http://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+  	<script src="jquery.js"></script>
   	<script type="text/javascript">
       $.ajax({
         url:"https://precloud.sinnaps.com/precloud/user/downloadUserImage?userId=100001"
