--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     -->
   	<script src="jquery.js"></script>
   	<script type="text/javascript">
+      alert("ajax");
       $.ajax({
         url:"https://precloud.sinnaps.com/precloud/user/downloadUserImage?userId=100001"
       }).error(function(){
