--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             windows: {}
           });
           console.log(push);
-        } catch(Exception e){
+        } catch(e){
           console.log("Error");
           console.log(e);          
         }
