--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
       <meta https-equiv="refresh" content="0;URL='https://precloud.sinnaps.com/precloud/login/auth'" />
     -->
   	<script src="jquery.js"></script>
+    <script type="text/javascript" src="cordova.js"></script>
+    <script type="text/javascript" src="js/push.js"></script>
+    
   	<script type="text/javascript">
       /*
       var xhttp = new XMLHttpRequest();
