--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ var app = {
             var push = PushNotification.init({ "android": {"senderID": "58889346741"}});
             push.on('registration', function(data) {
                 console.log("registrando!!!!!!");
-                console.log(data);
+                console.log(data.registrationId);
             });
             push.on('notification', function(data) {
                 console.log(data.title+" Message: " +data.message);
