--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ function init(){
           var push = PushNotification.init({ "android": {"senderID": "58889346741"}});
           push.on('registration', function(data) {
               console.log("registrando!!!!!!");
-              console.log(data);
+              console.log(data.registrationId);
           });
           push.on('notification', function(data) {
               console.log(data.title+" Message: " +data.message);
