--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
      
     function init(){
        var token = window.localStorage.getItem("deviceToken");
-       window.open('https://precloud.sinnaps.com/precloud/login/auth', '_self ');
+       window.open('https://precloud.sinnaps.com/precloud/', '_self ', 'location=no');
        alert(token);
     }      
   	</script>
